<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="rtl"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogs_back"
    android:padding="15dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:padding="15dp"
                android:id="@+id/sl_title"
                android:textColor="@color/mkDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_level"
                android:textAlignment="center"
                android:textSize="17sp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/sl_elm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/elementary_level"
                android:textSize="17sp"
                android:buttonTint="@color/mkRed"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/sl_inter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/intermediate_level"
                android:textSize="17sp"
                android:buttonTint="@color/mkRed"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/sl_adv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/advanced_level"
                android:textSize="17sp"
                android:buttonTint="@color/mkRed"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/sl_504"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/_504_essential_words"
                android:textSize="17sp"
                android:buttonTint="@color/mkRed"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/sl_tofel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:text="@string/_1001_tofel_vocab"
                android:textSize="17sp"
                android:buttonTint="@color/mkRed"/>
        </RadioGroup>
        </LinearLayout>
    </ScrollView>
<Button
    android:id="@+id/sl_change_btn"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/change_level"
    android:textColor="@color/mkWhite"
    android:textStyle="bold"
    android:textSize="17sp"
    android:background="@drawable/box_red"
    android:layout_margin="30dp"
    android:padding="5dp"
    />
</LinearLayout>