<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >
    <ImageView
        android:layout_marginTop="5dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/unsub"
        />
    <TextView
        android:id="@+id/unSub_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsub_r_u_sure"
        android:textSize="17sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/mkBlack"
        android:layout_margin="30dp"
        />
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_weight="1"
            android:textAlignment="center"
            android:id="@+id/unSUb_yes"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/mkDark"
            android:paddingTop="6dp"
            />
        <TextView

            android:textAlignment="center"
            android:layout_weight="1"
            android:id="@+id/unSub_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textStyle="bold"
            android:textSize="17sp"
            android:background="@drawable/box_red"
            android:textColor="@color/mkWhite"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"/>
    </LinearLayout>

</LinearLayout>